Garbage collection optimizations (changed PMatrix.getFloatArray() to received float[] instead of return float[] and all references)